fix: search results jump page

--- a/src/assets/style/base.styl
+++ b/src/assets/style/base.styl
@@ -538,14 +538,22 @@ html:has(.dark)
 .user-container .user-tabs .van-tag--mark
   font-weight bold
 
-.user-container .user_id,
-.user-container .user-tabs .van-tag--mark,
+.van-pagination__next, .van-pagination__prev
+  width 1rem
+
 .artwork-meta .date,
 .artwork-meta .whid,
+.van-pagination__page,
+.image-card .layer-num,
+.user-container .user_id,
+.user-container .follow .num,
+.user-container .friend .num,
+.user-container .user-tabs .van-tag--mark,
 .user-container .member-tag .member-tag-cnt
   font-family Bahnschrift,Dosis,Arial,Helvetica,sans-serif
 
-.user-container .user_account
+.user-container .user_account,
+.image-card .tag-r18-ai
   font-family Bahnschrift, Helvetica, Arial, sans-serif
 
 .user-container .user_link,
